# absolute/path/to/models/Movie.js
@@ -1,11 +1,0 @@
-const mongoose = require('mongoose');
-
-const movieSchema = new mongoose.Schema({
-    title: String,
-    year: Number,
-    genre: String,
-    rating: String,
-    description: String
-});
-
-module.exports = mongoose.model('Movie', movieSchema);
