# models/user.js
@@ -1,10 +1,9 @@
 const mongoose = require('mongoose');
 
 const userSchema = new mongoose.Schema({
-    googleId: { type: String, required: true },
+    githubId: { type: String, required: true, unique: true },
     displayName: { type: String, required: true },
-    firstName: { type: String, required: true },
-    lastName: { type: String, required: true },
+    username: { type: String, required: true },
     image: { type: String, required: true },
     role: { type: String, enum: ['user', 'admin'], default: 'user' }
 });
