# routes/contacts.js
@@ -8,10 +8,10 @@ const { ensureAdmin } = require('../middleware/check-role');
 router.get('/', contactsController.getAllContacts);
 router.get('/:id', contactsController.getContactById);
 router.post('/', ensureAuth, contactValidationRules(), validate, contactsController.createContact);
-/*  #swagger.security = [{ "google": ["profile"] }] */
+/*  #swagger.security = [{ "github": ["user:email"] }] */
 router.put('/:id', ensureAuth, contactValidationRules(), validate, contactsController.updateContact);
-/*  #swagger.security = [{ "google": ["profile"] }] */
+/*  #swagger.security = [{ "github": ["user:email"] }] */
 router.delete('/:id', ensureAuth, ensureAdmin, contactsController.deleteContact);
-/*  #swagger.security = [{ "google": ["profile"] }] */
+/*  #swagger.security = [{ "github": ["user:email"] }] */
 
 module.exports = router;
